--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -1,6 +1,8 @@
 %header
   - if user_signed_in?
     %div
+      テストユーザー
+    %div
       = link_to "ログアウト", destroy_user_session_path, method: :delete
   - else
     %div
