--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -9,3 +9,9 @@
       = link_to image_tag('logo.png', alt: 'mschool'), "#"
       = link_to "ログイン", new_user_session_path
       = link_to "新規登録", new_user_registration_path
+
+.Main
+  オンライン音楽教室
+
+  .Select
+    習いたい楽器を検索
