--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -15,6 +15,6 @@
 
   .Select
     習いたい楽器を検索
-  = form_with(model: course, url:"#", local: true) do |f|
-    = f.text_field
+  - form_with model: @course, url:"#", local: true do |f|
+    = f.text_field :category, autofocus: true, class: "CourseInputForm"
     = f.submit
