--- a/app/assets/stylesheets/_guides.scss
+++ b/app/assets/stylesheets/_guides.scss
@@ -1,3 +1,9 @@
 .GuidesMain{
-  background-image: url("/Users/yoshidanaoto/projects/mschool/app/assets/images/TopImage.jpg")
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-image: image-url("TopImage.png");
+}
+.GuidesMain{
+
 }
