--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,11 +4,7 @@
   .field
     = f.label :nickname
     %br/
-    = f.text_field :nickname, autofocus: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
+    = f.text_field :nicknam     = f.email_field :email, autofocus: true, autocomplete: "email"
   .field
     = f.label :password
     - if @minimum_password_length
