--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -13,6 +13,12 @@
 .GuidesMain
   Mschoolはオンラインの音楽教室です。
 
+  = form_with url: search_corrections_path, method: :GET, class: "TextbookBox__Search", local: true do |f|
+    = f.text_field :OCR, class: "TextbookBox__Search__Form"
+    .TextbookBox__Search__Icon
+      = button_tag type: 'submit', class: "TextbookBox__Search__Icon__Image" do
+        = icon('fa', 'search', class: "TextbookBox__Search__Icon__Image__Glasses")
+
   .GuidesMain__Select
     習いたい楽器を検索
   - form_with model: @course, url:"#", local: true do |f|
