--- a/app/views/guides/index.html.haml
+++ b/app/views/guides/index.html.haml
@@ -13,7 +13,7 @@
 .GuidesMain
   Mschoolはオンラインの音楽教室です。
 
-  = form_with url: search_corrections_path, method: :GET, class: "TextbookBox__Search", local: true do |f|
+  = form_with url: "#", method: :GET, local: true do |f|
     = f.text_field :OCR, class: "TextbookBox__Search__Form"
     .TextbookBox__Search__Icon
       = button_tag type: 'submit', class: "TextbookBox__Search__Icon__Image" do
